# ryanchrypto

./: .gitignore  CNAME  LICENSE  README.md  styles.css  wasm.js  wasm_bg.wasm
client/: Cargo.toml
client/src/: app.rs  lib.rs
client/src/components/: footer.rs  header.rs  sidebar.rs
client/src/routes/: about.rs  blog.rs  film.rs  home.rs  mod.rs  tech.rs
client/src/utils/: markdown.rs
docs/about/: about-intro.md  about-timeline.md  main.md  media.md  tech.md
docs/blog/: a-degenerate-regenerate.md  index.md
docs/film/: film-intro.md  film-projects.md
docs/tech/: tech-intro.md  tech-projects.md
scripts/: build_dev.sh  build_pro.sh
static/: styles.css
static/about/: index.html
