[package]
authors = ["ryan christoffersen <ryan@ryanchrypto.com>"]
description = "decentralized protocol research and development"
edition = "2018"
license = "MIT"
name = "ryanchrypto-client"
readme = "./README.md"
repository = "https://github.com/ryanchrypto/ryanchrypto.git"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = { version = "0.7.0", default-features = false }
wasm-bindgen = "0.2.67"
yew = "0.17.3"
yew-router = "0.14.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]